--- a/src/output.css
+++ b/src/output.css
@@ -574,9 +574,26 @@ video {
   z-index: 10;
 }
 
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.m-6 {
+  margin: 1.5rem;
+}
+
 .mx-32 {
   margin-left: 8rem;
   margin-right: 8rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mb-10 {
@@ -615,6 +632,14 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
 .flex {
   display: flex;
 }
@@ -635,6 +660,10 @@ video {
   height: 300px;
 }
 
+.h-\[50\%\] {
+  height: 50%;
+}
+
 .h-\[80vh\] {
   height: 80vh;
 }
@@ -643,8 +672,33 @@ video {
   height: 100vh;
 }
 
-.h-\[50\%\] {
-  height: 50%;
+.h-\[1000px\] {
+  height: 1000px;
+}
+
+.h-\[700px\] {
+  height: 700px;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-\[1200px\] {
+  height: 1200px;
+}
+
+.h-\[420px\] {
+  height: 420px;
 }
 
 .w-28 {
@@ -659,6 +713,10 @@ video {
   width: 100vw;
 }
 
+.w-\[500px\] {
+  width: 500px;
+}
+
 .w-\[70\%\] {
   width: 70%;
 }
@@ -667,8 +725,76 @@ video {
   width: 80%;
 }
 
+.w-\[1000px\] {
+  width: 1000px;
+}
+
+.w-\[700px\] {
+  width: 700px;
+}
+
+.w-\[300px\] {
+  width: 300px;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[30\%\] {
+  width: 30%;
+}
+
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[400px\] {
+  width: 400px;
+}
+
+.w-\[450px\] {
+  width: 450px;
+}
+
+.w-\[350px\] {
+  width: 350px;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.max-w-7xl {
+  max-width: 80rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.translate-x-3 {
+  --tw-translate-x: 0.75rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-3 {
+  --tw-translate-y: 0.75rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-64 {
+  --tw-translate-x: 16rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
@@ -735,8 +861,16 @@ video {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.content-between {
+  align-content: space-between;
 }
 
 .items-center {
@@ -765,6 +899,16 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-16 {
+  gap: 4rem;
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .scroll-smooth {
@@ -797,6 +941,10 @@ video {
   border-width: 2px;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-r-2 {
   border-right-width: 2px;
 }
@@ -813,6 +961,11 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\#d6b37c\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(214 179 124 / var(--tw-border-opacity, 1));
 }
 
 .bg-black\/60 {
@@ -855,16 +1008,17 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.bg-\[radial-gradient\(20\%_30\%_at_25\%_50\%\2c rgba\(59\2c 130\2c 246\2c 0\.35\)_0\%\2c transparent_100\%\)\2c radial-gradient\(30\%_40\%_at_80\%_20\%\2c rgba\(37\2c 99\2c 235\2c 0\.25\)_0\%\2c transparent_100\%\)\2c radial-gradient\(40\%_50\%_at_15\%_85\%\2c rgba\(29\2c 78\2c 216\2c 0\.25\)_0\%\2c transparent_100\%\)\2c radial-gradient\(35\%_45\%_at_70\%_75\%\2c rgba\(30\2c 64\2c 175\2c 0\.35\)_0\%\2c transparent_100\%\)\2c linear-gradient\(135deg\2c \#020617_0\%\2c \#020617_40\%\2c \#020617_100\%\)\] {
-  background-image: radial-gradient(20% 30% at 25% 50%,rgba(59,130,246,0.35) 0%,transparent 100%),radial-gradient(30% 40% at 80% 20%,rgba(37,99,235,0.25) 0%,transparent 100%),radial-gradient(40% 50% at 15% 85%,rgba(29,78,216,0.25) 0%,transparent 100%),radial-gradient(35% 45% at 70% 75%,rgba(30,64,175,0.35) 0%,transparent 100%),linear-gradient(135deg,#020617 0%,#020617 40%,#020617 100%);
+.bg-\[\#1c2b24\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(28 43 36 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[radial-gradient\(25\%_35\%_at_20\%_60\%\2c rgba\(37\2c 99\2c 235\2c 0\.25\)_0\%\2c transparent_100\%\)\2c radial-gradient\(30\%_40\%_at_85\%_30\%\2c rgba\(29\2c 78\2c 216\2c 0\.25\)_0\%\2c transparent_100\%\)\2c radial-gradient\(45\%_55\%_at_50\%_80\%\2c rgba\(30\2c 64\2c 175\2c 0\.35\)_0\%\2c transparent_100\%\)\2c linear-gradient\(135deg\2c \#020617_0\%\2c \#020617_100\%\)\] {
   background-image: radial-gradient(25% 35% at 20% 60%,rgba(37,99,235,0.25) 0%,transparent 100%),radial-gradient(30% 40% at 85% 30%,rgba(29,78,216,0.25) 0%,transparent 100%),radial-gradient(45% 55% at 50% 80%,rgba(30,64,175,0.35) 0%,transparent 100%),linear-gradient(135deg,#020617 0%,#020617 100%);
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .from-blue-900 {
@@ -927,6 +1081,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
 .pl-4 {
   padding-left: 1rem;
 }
@@ -937,10 +1096,6 @@ video {
 
 .text-center {
   text-align: center;
-}
-
-.text-end {
-  text-align: end;
 }
 
 .font-sans {
@@ -955,6 +1110,11 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
 }
 
 .text-7xl {
@@ -972,8 +1132,17 @@ video {
   line-height: 1.75rem;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .font-semibold {
   font-weight: 600;
+}
+
+.leading-relaxed {
+  line-height: 1.625;
 }
 
 .text-black {
@@ -997,6 +1166,11 @@ video {
 
 .text-white\/80 {
   color: rgb(255 255 255 / 0.8);
+}
+
+.text-\[\#d6b37c\] {
+  --tw-text-opacity: 1;
+  color: rgb(214 179 124 / var(--tw-text-opacity, 1));
 }
 
 .backdrop-blur-sm {
@@ -1055,6 +1229,11 @@ video {
   background-color: rgb(255 255 255 / 0.5);
 }
 
+.hover\:bg-\[\#d6b37c\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(214 179 124 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity, 1));
@@ -1065,6 +1244,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.hover\:text-\[\#1c2b24\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(28 43 36 / var(--tw-text-opacity, 1));
+}
+
 .hover\:backdrop-blur-0:hover {
   --tw-backdrop-blur: blur(0);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -1073,4 +1257,10 @@ video {
 .hover\:backdrop-blur-sm:hover {
   --tw-backdrop-blur: blur(4px);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+@media (min-width: 1024px) {
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
